# bitturbulence

./: Cargo.toml  README.md
crates/bitturbulence-client/: Cargo.toml
crates/bitturbulence-client/src/: commands.rs  daemon.rs
crates/bitturbulence-client/src/daemon/: accept.rs  context.rs  drainer.rs  filler.rs  mod.rs  peer.rs  scheduler_actor.rs  state_loop.rs  stream.rs  tracker.rs
crates/bitturbulence-dht/src/: bucket.rs  error.rs  handle.rs  lib.rs  node.rs
crates/bitturbulence-peer/src/: session.rs
crates/bitturbulence-peer/tests/: integration.rs
crates/bitturbulence-pieces/src/scheduler/: availability.rs  blocks.rs  mod.rs  pick.rs  tests.rs  types.rs
crates/bitturbulence-protocol/: Cargo.toml
crates/bitturbulence-protocol/src/: lib.rs  metainfo.rs
crates/bitturbulence-protocol/src/wire/: message.rs
crates/bitturbulence-protocol/tests/fixtures/: multifile-13.bitflow
crates/bitturbulence-tracker/src/: client.rs  error.rs  server.rs  store.rs  types.rs
crates/bitturbulence-transport/: Cargo.toml
crates/bitturbulence-transport/src/: config.rs  endpoint.rs  lib.rs
crates/qt-client/: Cargo.toml
crates/qt-client/src/: cli.rs  commands.rs  config.rs  daemon.rs  main.rs  state.rs
crates/qt-peer/src/: error.rs  session.rs
crates/qt-peer/tests/: integration.rs
crates/qt-pieces/: Cargo.toml
crates/qt-pieces/src/: lib.rs  scheduler.rs  store.rs  torrent_store.rs  verify.rs
crates/qt-protocol/: Cargo.toml
crates/qt-protocol/src/: lib.rs  metainfo.rs  priority.rs
crates/qt-tracker/src/: types.rs
crates/qt-transport/tests/: integration.rs
docs/: architecture.md  issues.md
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: current.rs  end_to_end.rs  swarm.rs
(+2 files in other folders)
